# amethyst-2d-playground

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  bors.toml  clippy_lints_to_allow.txt  clippy_lints_to_ignore.txt  clippy_lints_to_warn.txt  codecov.yml  copy_build_artifact.ps1  prep-dummy-soundcard.sh  run_clippy.ps1  run_clippy.sh  rustfmt.toml  travis.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: daily.yml  on_pull_request.yml  on_submit.yml  security_audit.yml
resources/config/: display.ron
resources/ui/: credits.ron  hud.ron
src/: game_data.rs  main.rs  pong.rs  test_harness.rs
src/audio/: audio_utils.rs  mod.rs
src/config/: display.ron
src/game_data/: mod.rs
src/states/: credits.rs  menu.rs  mod.rs  pause.rs  pong.rs  util.rs  welcome.rs
src/systems/: bounce.rs  events.rs  mod.rs  move_balls.rs  paddle.rs  winner.rs
src/systems/bundles/: mod.rs  pong_bundle.rs
src/test_harness/: integration_test_application.rs  mod.rs  raw_file_loader_source.rs  send_mock_events.rs
