[package]
name = "amethyst-starter-2d"
version = "0.0.2"
authors = ["Kevin Agwaze <mrkivinator@gmail.com>"]
description = "amethyst game engine playground"
edition = "2018"
repository = "https://github.com/RebornRider/amethyst-2d-playground"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["game"]
categories = ["games"]

[dependencies]
amethyst = { version = "0" } #, features = ["nightly"] }
amethyst_test = { version = "0" }
log = { version = "0", features = ["serde"] }
dunce = { version = "1" }
serde = { version = "1", features = ["derive"] }
test-case = { version = "0" }
cfg-if = { version = "0" }
assert_approx_eq = { version = "1" }
derivative = { version = "1" }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]